--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -19,6 +19,7 @@ idb = { version = "*", optional = false }
 idalloc = "0.1.1"
 parking_lot = "0.12.3"
 send_wrapper = "0.6.0"
+futures = "0.3.31"
 
 [features]
 hydrate = ["jiff/js",
