--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,14 @@ site-addr = "0.0.0.0:3210"
 
 site-pkg-dir = "pkg"
 
+
+# The site root folder is where cargo-leptos generate all output.
+# NOTE: It is relative to the workspace root when running in a workspace.
+# WARNING: all content of this folder will be erased on a rebuild!
+#
+# Optional, defaults to "/site" in the Cargo target directory. Env: LEPTOS_SITE_ROOT.
+site-root = "target/site"
+
 # The port to use for automatic reload monitoring
 reload-port = 3211
 
