--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,4 +11,4 @@ diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 dotenvy = "0.15.7"
 reqwest = { version = "0.12.8", features = ["json"] }
 shellexpand = "3.1.0"
-tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
