--- a/diesel-test/Cargo.toml
+++ b/diesel-test/Cargo.toml
@@ -14,4 +14,4 @@ itertools = "0.13.0"
 parking_lot = "0.12.3"
 pg-connection-string = "0.0.2"
 tokio = { version = "1.41.0", features = ["full"] }
-tokio-postgres = "0.7.12" # I don't think there's a way to avoid a transaction in diesel, which means no DROP DATABASE.
+tokio-postgres = "0.7.12"
