--- a/github_api/Cargo.toml
+++ b/github_api/Cargo.toml
@@ -7,10 +7,10 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
-serde = { version = "^1.0", features = ["derive"] }
-serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
-serde_json = "^1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_with = { version = "3.8", features = ["base64"] }
+serde_json = "1.0"
 serde_repr = "^0.1"
-url = "^2.5"
-reqwest = { version = "^0.12", features = ["json", "multipart"] }
-jiff = { version = "0.1.14", features = ["serde"] }
+url = "2.5"
+reqwest = { version = "0.12", features = ["json", "multipart"] }
+jiff = { version = "0.1.14", default-features = false, features = ["serde"] }
