--- a/macros_impl/Cargo.toml
+++ b/macros_impl/Cargo.toml
@@ -10,4 +10,4 @@ itertools = "0.13.0"
 proc-macro2 = "1.0.89"
 quote = "1.0.37"
 serde = { version = "1.0.215", features = ["derive"] }
-syn = { version = "2.0.87", features = ["fold", "extra-traits", "full"] }
+syn = { version = "2.0.87", default-features = false, features = ["extra-traits", "fold"] }
