--- a/web_hydrate/Cargo.toml
+++ b/web_hydrate/Cargo.toml
@@ -9,9 +9,9 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-web = { path = "../web", features = ["hydrate"] }
-leptos = { version = "=0.7.0-rc1", features = [ "hydrate", "nightly" ] }
-wasm-bindgen = "^0.2.93"
+web = { path = "../web", version = "*", features = ["hydrate"] }
+leptos = { version = "0.7", features = ["hydrate", "nightly"] }
+wasm-bindgen = { version = "0.2.93", default-features = false }
 console_error_panic_hook = "0.1.7"
 tracing-wasm = "0.2.1"
 
