setup dependency injection (ok, fine, it was mocking) for Github API for testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "macros_impl",
     "github_api",
     "typesafe_idb",
+    "reqwest_wiremock",
 ]
 
 [[workspace.metadata.leptos]]
