--- a/github_api/Cargo.toml
+++ b/github_api/Cargo.toml
@@ -14,3 +14,4 @@ serde_repr = "^0.1"
 url = "2.5"
 reqwest = { version = "0.12", features = ["json", "multipart"] }
 jiff = { version = "0.1.14", default-features = false, features = ["serde"] }
+reqwest_wiremock = { path = "../reqwest_wiremock" }
