--- a/diesel-test/Cargo.toml
+++ b/diesel-test/Cargo.toml
@@ -13,5 +13,5 @@ futures = "0.3.31"
 itertools = "0.13.0"
 parking_lot = "0.12.3"
 pg-connection-string = "0.0.2"
-tokio = { version = "1.41.0", features = ["full"] }
+tokio = { version = "1.41.0", features = [] }
 tokio-postgres = "0.7.12"
