--- a/github_api/Cargo.toml
+++ b/github_api/Cargo.toml
@@ -15,3 +15,6 @@ url = "2.5"
 reqwest = { version = "0.12", features = ["json", "multipart"] }
 jiff = { version = "0.1.14", default-features = false, features = ["serde"] }
 reqwest_wiremock = { path = "../reqwest_wiremock" }
+
+[features]
+ssr = ["reqwest_wiremock/mocking"]
