--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -23,10 +23,7 @@ reqwest = { version = "0.12.8", features = ["json"] }
 serde = "1.0.210"
 serde_urlencoded = "0.7.1"
 serde_json = "1.0.132"
-idb = { version = "0.6.4", features = ["doc"] }
 typesafe_idb = { path = "../typesafe_idb" }
-# serde-wasm-bindgen = "0.6.5"
-# serde-wasm-bindgen = { path = "../../serde-wasm-bindgen" }
 parking_lot = "0.12.3"
 futures = "0.3.31"
 js-sys = "0.3.72"
@@ -43,6 +40,6 @@ codee = "0.2.0"
 
 [features]
 default = []
-hydrate = ["leptos/hydrate", "shared/hydrate", "jiff/js"]
-ssr = ["leptos/ssr", "leptos_router/ssr"]
+hydrate = ["leptos/hydrate", "jiff/js"]
+ssr = ["leptos/ssr", "leptos_router/ssr", "shared/ssr"]
 tracing = []
