--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,12 @@ site-root = "target/site"
 # The port to use for automatic reload monitoring
 reload-port = 3211
 
+# Assets source dir. All files found here will be copied and synchronized to site-root.
+# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
+#
+# Optional. Env: LEPTOS_ASSETS_DIR.
+assets-dir = "assets/assets"
+
 [profile.dev]
 opt-level = 1
 
