--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -49,7 +49,7 @@ reqwest_wiremock = { path = "../reqwest_wiremock", features = ["mocking"] }
 serde_path_to_error = "0.1.16"
 
 [dev-dependencies]
-axum-test = { path = "../../axum-test", features = ["ws"] }
+axum-test = { version = "*", features = ["ws"] }
 diesel_test = { path = "../diesel-test" }
 tokio-tungstenite = "0.24.0"
 wiremock = "0.6.2"
