feat: show loading icon when loading [wip]

--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -36,7 +36,7 @@ leptos-use = { version = "0.14", default-features = false, features = ["use_webs
 strum = "0.26.3"
 send_wrapper = "0.6.0"
 itertools = "0.13.0"
-jiff = { version = "0.1.14", default-features = false, features = ["serde", "alloc", "std"] }
+jiff = { git = "https://github.com/BurntSushi/jiff", default-features = false, features = ["serde", "alloc", "std"] }
 codee = "0.2.0"
 icondata = { version = "0.5.0", default-features = false, features = ["heroicons"] }
 icondata_core = "0.1.0"
