--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -28,7 +28,6 @@ typesafe_idb = { path = "../typesafe_idb" }
 parking_lot = "0.12.3"
 futures = "0.3.31"
 js-sys = "0.3.72"
-wasm-bindgen-test = "0.3.45"
 heck = "0.5.0"
 strum_macros = "0.26.4"
 derive_more = { version = "1.0.0", features = ["display", "from_str"] }
@@ -43,9 +42,19 @@ icondata_core = "0.1.0"
 pin-project = "1.1.7"
 gloo-net = { version = "0.6.0", default-features = false, features = ["websocket"] }
 gloo-utils = { version = "0.2.0", default-features = false }
+wasm-bindgen-test = "0.3.45"
+
+[dev-dependencies]
+tracing-subscriber = "0.3.19"
+tracing-subscriber-wasm = "0.1.0"
+tracing-test = "0.2.5"
+wasm-bindgen-test = "0.3.45"
 
 [features]
 default = []
 hydrate = ["leptos/hydrate", "jiff/js"]
 ssr = ["leptos/ssr", "leptos_router/ssr", "shared/ssr"]
 tracing = []
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
