--- a/web_hydrate/Cargo.toml
+++ b/web_hydrate/Cargo.toml
@@ -14,6 +14,7 @@ leptos = { version = "0.7", features = ["hydrate", "nightly"] }
 wasm-bindgen = { version = "0.2.93", default-features = false }
 console_error_panic_hook = "0.1.7"
 tracing-wasm = "0.2.1"
+tracing = { version = "0.1.41", default-features = false }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
