--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -40,7 +40,7 @@ icondata = { version = "0.5.0", default-features = false, features = ["heroicons
 icondata_core = "0.1.0"
 pin-project = "1.1.7"
 gloo-net = { version = "0.6.0", default-features = false, features = ["websocket"] }
-gloo-utils = { version = "0.2.0", default-features = false }
+gloo-utils = { version = "0.2.0", default-features = false, features = ["serde"] }
 wasm-bindgen-test = "0.3.45"
 tracing-wasm = "0.2.1"
 console_error_panic_hook = "0.1.7"
