--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -20,6 +20,7 @@ url = "2.5.2"
 wasm-bindgen-futures = "0.4.43"
 
 shared = { path = "../shared" }
+zwang_router = { path = "../zwang_router" }
 reqwest = { version = "0.12.8", features = ["json"] }
 serde = "1.0.210"
 serde_urlencoded = "0.7.1"
