main_model::Part: use bon as a builder and enofroce some runtime invariants on ::new(), make all attrs private

--- a/macros_impl/Cargo.toml
+++ b/macros_impl/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+bon = "3.3.2"
 convert_case = "0.6.0"
 darling = "0.20.10"
 derive_more = { version = "1.0.0", features = ["deref", "from"] }
