--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -16,6 +16,7 @@ web-sys = { version = "*", default-features = false, features = ["Window", "Clip
 "Navigator", "Storage", "WebSocket"] }
 tracing = "0.1.40"
 url = "2.5.2"
+github_api = { path = "../github_api" }
 
 wasm-bindgen-futures = "0.4.43"
 
