--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -32,7 +32,7 @@ bytes = "1.8.0"
 derive_more = { version = "1.0.0", features = ["display", "error"] }
 assert-json-diff = "2.0.2"
 github_api = { path = "../github_api" }
-jiff = { git = "https://github.com/BurntSushi/jiff", default-features = false }
+jiff = { version = "*", default-features = false }
 axum-typed-websockets = "0.6.0"
 futures = "0.3.31"
 tower-sessions = "0.13.0"
