--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -9,7 +9,7 @@ serde = { version = "1.0.210", features = ["derive"] }
 url = { version = "2.5.2", features = ["serde"] }
 github_webhook_body = { path = "../github_webhook_body" }
 derive_more = { version = "1.0.0", features = ["as_ref", "deref", "display", "error", "from", "into"] }
-jiff = { git = "https://github.com/BurntSushi/jiff", default-features = false, features = ["serde", "alloc", "std"] }
+jiff = { version = "*", default-features = false, features = ["serde", "alloc", "std"] }
 serde_json = "1.0.132"
 tracing = "0.1.40"
 github_api = { path = "../github_api" }
@@ -28,9 +28,10 @@ http = "1.1.0"
 ewebsock = "0.8.0"
 pin-project = "1.1.7"
 serde_urlencoded = "0.7.1"
+leptos = { version = "*", optional = true }
 
 [features]
-hydrate = [ "jiff/js" ]
+hydrate = [ "jiff/js", "leptos" ]
 ssr = [
 	"dep:diesel-derive-newtype",
 	"dep:diesel",
