--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -30,6 +30,7 @@ pin-project = "1.1.7"
 serde_urlencoded = "0.7.1"
 leptos = { version = "*", optional = true }
 web-sys = { version = "*", optional = true, default-features = false, features = ["Performance"] }
+any_spawner = "0.2.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.45"
