--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -8,7 +8,7 @@ reqwest = { version = "0.12.8", features = ["json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 url = { version = "2.5.2", features = ["serde"] }
 github_webhook_body = { path = "../github_webhook_body" }
-derive_more = { version = "1.0.0", features = ["as_ref", "deref", "display", "error", "from", "into"] }
+derive_more = { version = "1.0.0", features = ["as_ref", "deref", "display", "error", "from", "into", "constructor"] }
 jiff = { version = "*", default-features = false, features = ["serde", "alloc", "std"] }
 serde_json = "1.0.132"
 tracing = "0.1.40"
