--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "typesafe_idb",
     "reqwest_wiremock",
     "zwang_router",
+    "wasm_testing_utils",
 ]
 
 [[workspace.metadata.leptos]]
