--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0.132"
 tracing = "0.1.40"
 github_api = { path = "../github_api" }
 macros = { path = "../macros" }
+wasm_testing_utils = { path = "../wasm_testing_utils" }
 typesafe_idb = { path = "../typesafe_idb", optional = false }
 utils = { path = "../utils" }
 idb = { version = "*", optional = false }
@@ -31,6 +32,7 @@ serde_urlencoded = "0.7.1"
 leptos = { version = "*", optional = true }
 web-sys = { version = "*", optional = true, default-features = false, features = ["Performance"] }
 any_spawner = "0.2.0"
+tracing-subscriber = "0.3.19"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.50"
