--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -33,6 +33,7 @@ leptos = { version = "*", optional = true }
 web-sys = { version = "*", optional = true, default-features = false, features = ["Performance"] }
 any_spawner = "0.2.0"
 tracing-subscriber = "0.3.19"
+bon = "3.3.2"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.50"
