--- a/github_api/Cargo.toml
+++ b/github_api/Cargo.toml
@@ -16,6 +16,7 @@ reqwest = { version = "0.12", features = ["json", "multipart"] }
 jiff = { version = "*", default-features = false, features = ["serde"] }
 reqwest_wiremock = { path = "../reqwest_wiremock" }
 serde_path_to_error = "0.1.16"
+bon = "3.3.2"
 
 [features]
 ssr = ["reqwest_wiremock/mocking"]
