--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -34,6 +34,7 @@ web-sys = { version = "*", optional = true, default-features = false, features =
 any_spawner = "0.2.0"
 tracing-subscriber = "0.3.19"
 bon = "3.3.2"
+mockall = "0.13.1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.50"
