--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -35,10 +35,11 @@ any_spawner = "0.2.0"
 tracing-subscriber = "0.3.19"
 bon = "3.3.2"
 mockall = "0.13.1"
+maplit = "1.0.2"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.50"
-
+gloo-timers = { version = "0.3.0", features = ["futures"] }
 
 [features]
 hydrate = [ "jiff/js", "leptos", "web-sys" ]
