--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -36,6 +36,7 @@ tracing-subscriber = "0.3.19"
 bon = "3.3.2"
 mockall = "0.13.1"
 maplit = "1.0.2"
+bimap = "0.6.3"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.50"
