--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ members = [
     "typesafe_idb",
     "reqwest_wiremock",
     "zwang_router",
-    "leptos_testing_utils",
+    "leptos_testing_utils", "typed_db",
 ]
 
 [[workspace.metadata.leptos]]
