--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -37,6 +37,7 @@ bon = "3.3.2"
 mockall = "0.13.1"
 maplit = "1.0.2"
 bimap = "0.6.3"
+derivative = "2.2.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.50"
