--- a/typed_db/Cargo.toml
+++ b/typed_db/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+derivative = "2.2.0"
 idb = "0.6.4"
 serde = { version = "1.0.219", features = ["derive"] }
 typesafe_idb = { path = "../typesafe_idb" }
