--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -28,6 +28,7 @@ serde = "1.0.210"
 serde_urlencoded = "0.7.1"
 serde_json = "1.0.132"
 typesafe_idb = { path = "../typesafe_idb" }
+typed_db = { path = "../typed_db" }
 parking_lot = "0.12.3"
 futures = "0.3.31"
 js-sys = "0.3.72"
@@ -47,6 +48,7 @@ gloo-utils = { version = "0.2.0", default-features = false, features = ["serde"]
 tracing-wasm = "0.2.1"
 console_error_panic_hook = "0.1.7"
 timeago = "0.4.2"
+idb = "0.6.4"
 
 [dev-dependencies]
 tracing-subscriber = "0.3.19"
