--- a/typed_db/Cargo.toml
+++ b/typed_db/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 derivative = "2.2.0"
 idb = "0.6.4"
+rusqlite = { version = "0.37.0", features = ["bundled"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
 typesafe_idb = { path = "../typesafe_idb" }
