--- a/typed_db/Cargo.toml
+++ b/typed_db/Cargo.toml
@@ -5,8 +5,13 @@ edition = "2024"
 
 [dependencies]
 derivative = "2.2.0"
-idb = "0.6.4"
-rusqlite = { version = "0.37.0", features = ["bundled"] }
+idb = { version = "0.6.4", optional = true }
+rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0"
-typesafe_idb = { path = "../typesafe_idb" }
+serde_json = { version = "1.0", optional = true }
+wasm-bindgen = { version = "*", optional = true }
+js-sys = { version = "*", optional = true }
+
+[features]
+idb = ["dep:idb", "dep:wasm-bindgen", "dep:js-sys"]
+sqlite = ["rusqlite", "serde_json"]
