--- a/typed_db/Cargo.toml
+++ b/typed_db/Cargo.toml
@@ -11,7 +11,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
 wasm-bindgen = { version = "*", optional = true }
 js-sys = { version = "*", optional = true }
-send_wrapper = { version = "0.6.0", optional = true }
+send_wrapper = { version = "0.6.0", optional = true, features = ["futures"] }
 
 [features]
 idb = ["dep:idb", "dep:wasm-bindgen", "dep:js-sys", "dep:send_wrapper"]
