--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -5,11 +5,14 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.83"
+futures = "*"
+pin-project = "1.0"
 reqwest = "0.12.8"
-send_wrapper = { version = "0.6.0", features = ["futures"] }
+
 serde = "1.0.210"
 serde_json = "1.0.132"
 url = "2.5.2"
 
 [features]
 ssr = []
+hydrate = []
